# AFIT-CSCE689-DRS-S

./: .gitignore  AUTHORS  INSTALL  README.md  configure.ac  markspub
build-aux/: dir_use.txt
include/: DivFinderSP.h  DivFinderT.h  config.h
m4/: dir_use.txt
scripts/: convert2csv.cpp  resultsSP.txt  resultsSP2.31-2.32-2.txt  resultsSP2.31-2.32.txt  resultsT-15000.txt  resultsT2.31-2.32-2v4threads.txt  resultsT2.31-2.32v2threads.txt  resultsT2.31-2.32v4threads.txt  resultsvaryingthreads1.txt  resultsvaryingthreads10.txt  resultsvaryingthreads11.txt  resultsvaryingthreads12.txt  resultsvaryingthreads13.txt  resultsvaryingthreads14.txt  resultsvaryingthreads15.txt  resultsvaryingthreads16.txt  resultsvaryingthreads2.txt  resultsvaryingthreads3.txt  resultsvaryingthreads4.txt  resultsvaryingthreads5.txt  resultsvaryingthreads6.txt  resultsvaryingthreads7.txt  resultsvaryingthreads8.txt  resultsvaryingthreads9.txt  resultsvaryingthreadsSP.txt  simulator.sh  simulatorSingleThreaded.sh
scripts/csv_files/: SP15000.csv  SP2.31-15000.csv  SP2.32-100000.csv  T15000.csv  T2.31-150004threads.csv  T2.32-100000v2threads.csv  T2.32-100000v4threads.csv  vary1.csv  vary10.csv  vary11.csv  vary12.csv  vary13.csv  vary14.csv  vary15.csv  vary16.csv  vary2.csv  vary3.csv  vary4.csv  vary5.csv  vary6.csv  vary7.csv  vary8.csv  vary9.csv  varySP.csv
scripts/csv_files/excel_format/: SP-2-4-threads-2.32-100000.xlsx  SP-4Threads-15000.xlsx  SP-4Threads-2.31-15000.xlsx  VaryingThreads.xlsx
src/: DivFinderSP.cpp  DivFinderT.cpp  Makefile.am  main.cpp
