bin_PROGRAMS = divfinder


divfinder_SOURCES = main.cpp DivFinder.cpp DivFinderSP.cpp
# tcpserver_LDFLAGS = -largon2

#tcpclient_SOURCES = client_main.cpp Client.cpp TCPClient.cpp strfuncts.cpp

# For homework 2
# my_adduser_SOURCES = adduser_main.cpp PasswdMgr.cpp FileDesc.cpp strfuncts.cpp
# my_adduser_LDFLAGS = -largon2
